charts/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      runtimeClassName: nvidia
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release
          imagePullPolicy: Always
          ports:
            - containerPort: 2283
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
              nvidia.com/gpu: 1
            limits:
              memory: 3Gi
              cpu: 2000m
              nvidia.com/gpu: 1
          volumeMounts:
            - name: upload
              mountPath: /usr/src/app/upload
            - name: library
              mountPath: /mnt/library
            - name: dri
              mountPath: /dev/dri
      volumes:
        - name: upload
          hostPath:
            path: /mnt/ext_ssh_bk/immich/Gallery/immich
            type: DirectoryOrCreate
        - name: library
          hostPath:
            path: /mnt/big_storage/immich/library
            type: DirectoryOrCreate
        - name: dri
          hostPath:
            path: /dev/dri
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      runtimeClassName: nvidia
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:release-cuda
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 3Gi
              cpu: 2000m
              nvidia.com/gpu: 1
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          hostPath:
            path: /mnt/ext_ssh_bk/immich/model-cache
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
